feat: add response wrapper
