# docs/swagger.json
@@ -373,6 +373,17 @@
         }
     },
     "definitions": {
+        "dto.APIError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.AnalyticsSummary": {
             "type": "object",
             "properties": {
@@ -440,6 +451,13 @@
             "type": "object",
             "properties": {
                 "error": {
+                    "$ref": "#/definitions/dto.APIError"
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": false
+                },
+                "timestamp": {
                     "type": "string"
                 }
             }
@@ -536,10 +554,25 @@
                 }
             }
         },
-        "dto.MessageResponse": {
+        "dto.Message": {
             "type": "object",
             "properties": {
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.MessageResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/dto.Message"
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": true
+                },
+                "timestamp": {
                     "type": "string"
                 }
             }
